--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'groovyx.grooid.groovy-android'
+apply plugin: 'com.neenbedankt.android-apt'
 
 project.androidGroovy {
     options {
@@ -39,10 +40,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'org.codehaus.groovy:groovy:2.4.1:grooid'
     compile 'com.android.support:support-v4:21.0.3'
-    compile "com.arasthel:swissknife:1.2.2"
+    compile 'com.arasthel:swissknife:1.2.2'
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.github.shell-software:fab:1.0.5'
     compile 'com.wada811:android-material-design-colors:2.0.0'
+    compile 'com.squareup:otto:1.3.6'
+
+    compile 'com.hannesdorfmann.fragmentargs:annotation:2.0.1'
+    apt 'com.hannesdorfmann.fragmentargs:processor:2.0.1'
 }
 
 //// add support for Groovy to existing configurations
