--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sonerik.neuralnetworksandroid" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.sonerik.neuralnetworksandroid">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        tools:replace="android:label"
         android:allowBackup="true"
         android:name=".App"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +16,7 @@
 
         <activity
             android:name=".activities.MainActivity"
-            android:label="Main activity" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
