--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,10 @@ dependencies {
     compile 'com.github.shell-software:fab:1.0.5'
     compile 'com.wada811:android-material-design-colors:2.0.0'
     compile 'com.squareup:otto:1.3.6'
-
     compile 'com.hannesdorfmann.fragmentargs:annotation:2.0.1'
     apt 'com.hannesdorfmann.fragmentargs:processor:2.0.1'
+    compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'com.github.dmytrodanylyk.shadow-layout:library:1.0.2'
 }
 
 //// add support for Groovy to existing configurations
