--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     apt 'com.hannesdorfmann.fragmentargs:processor:2.0.1'
     compile 'com.android.support:cardview-v7:22.0.0'
     compile 'com.github.dmytrodanylyk.shadow-layout:library:1.0.2'
+    compile 'com.jpardogo.materialtabstrip:library:1.0.9'
+    compile 'com.afollestad:material-dialogs:0.6.5.2'
 }
 
 //// add support for Groovy to existing configurations
