--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        tools:replace="android:label"
+        tools:replace="android:label, android:icon"
         android:allowBackup="true"
         android:name=".App"
         android:icon="@mipmap/ic_launcher"
