--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <application
         tools:replace="android:label, android:icon"
+        android:largeHeap="true"
         android:allowBackup="true"
         android:name=".App"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +16,8 @@
         android:theme="@style/AppTheme" >
 
         <activity
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
